--- a/lib/raffley_web/components/layouts/app.html.heex
+++ b/lib/raffley_web/components/layouts/app.html.heex
@@ -15,6 +15,9 @@
       <a href="/tips" class="hover:text-zinc-700">
         Tips
       </a>
+      <a href="/greeting" class="hover:text-zinc-700">
+        Greeting
+      </a>
     </div>
   </div>
 </header>
