made tips links

--- a/lib/raffley_web/controllers/rule_html/index.html.heex
+++ b/lib/raffley_web/controllers/rule_html/index.html.heex
@@ -5,7 +5,9 @@
 <ol>
   <%= for rule <- @rules do %>
     <li>
-      <%= rule.text %>
+      <a href={~p"/rules/#{rule.id}"}>
+        <%= rule.text %>
+      </a>
     </li>
   <% end %>
 </ol>
