--- a/lib/raffley_web/controllers/tip_html/tip.html.heex
+++ b/lib/raffley_web/controllers/tip_html/tip.html.heex
@@ -2,7 +2,9 @@
 <ol>
   <%= for tip <- @tips do %>
     <li>
-      <%= tip.text %>
+      <a href={~p"/tips/#{tip.id}"}>
+        {tip.text}
+      </a>
     </li>
   <% end %>
 </ol>
